# tetris-mcts

./: .gitignore  CHANGELOG_CONFIG.md  CLAUDE.md  ML_PLAN.md  MODEL_FUSION_README.md  Makefile  NEXT_STEPS.md  PARAMETERS.md  POSSIBLE_ADDITIONS.md  PROJECT_OVERVIEW.md  README.md  REFACTOR.md  cached.diff  config.yaml  hello.py  pyproject.toml  tetris_game.py  train.py
analysis/: v17_log_summary.json  v17_run_takeaways.md
benchmarks/: README.md  batch_chance_results.jsonl  bootstrap_tree_reuse_4k_10g_50p.json  bootstrap_tree_reuse_4k_10g_50p_postfix.json  bootstrap_tree_reuse_smoke.json  cpu_compare_meta_Axels-MacBook-Air.local__20260213T234237Z.txt  network_size_benchmark.jsonl  profile_cpu_dummy.jsonl  profile_results.jsonl  reuse_diag_1000.json  reuse_diag_200.json  reuse_diag_4000.json  run_cpu_compare.sh  samply_mcts_dummy_profile_pre.json.syms.json  samply_mcts_dummy_profile_pre_long.json.syms.json  seed42_no_reuse_replay.jsonl  simple_evaluate_reuse_vs_no_reuse_cache.json  sweep_c_puct.sh  sweep_q_normalization.sh  tmp_seed42_no_1000.jsonl  tmp_seed42_no_8000.jsonl  tmp_seed42_reuse_1000.jsonl  tmp_seed42_reuse_4000.jsonl  tmp_seed42_reuse_8000.jsonl  tmp_seed42_sim2000_reuse1.jsonl  tmp_seed42_sim4000_reuse0.jsonl  tree_reuse_dummy.jsonl
checkpoints/: latest.pt  latest_metadata.json
docs/: IMPROVED_NETWORK_ARCHITECTURE.md  NETWORK_ARCHITECTURE.md  NEXT_STEPS.md  PROJECT_OVERVIEW.md  TRAINING_LEARNINGS.md
memories/: MEMORY.md
ml/: __init__.py  action_space.py  data.py  network.py  selfplay.py  training.py  weights.py
paper/: README.md  build.sh
scripts/: tetris_game.py  (+2 more)
tetris_core/: Cargo.toml  __init__.py  pyproject.toml
tetris_core/proptest-regressions/env/: tests.txt
tetris_core/src/: constants.rs  env.rs  generator.rs  kicks.rs  lib.rs  mcts.rs  moves.rs  nn.rs  piece.rs  scoring.rs
tetris_core/src/env/: board.rs  clearing.rs  global_cache.rs  lock_delay.rs  mod.rs  movement.rs  piece_management.rs  placement.rs  pymethods.rs  state.rs  tests.rs
tetris_core/src/game/: action_space.rs  constants.rs  kicks.rs  mod.rs  moves.rs  piece.rs  scoring.rs
tetris_core/src/game/env/: board.rs  clearing.rs  global_cache.rs  lock_delay.rs  movement.rs  piece_management.rs  placement.rs  pymethods.rs  state.rs  tests.rs
tetris_core/src/generator/: evaluation.rs  game_generator.rs  mod.rs  npz.rs  types.rs
tetris_core/src/generator/game_generator/: mod.rs  py_api.rs  runtime.rs  shared.rs  tests.rs
tetris_core/src/inference/: mod.rs  tests.rs
tetris_core/src/mcts/: action_space.rs  agent.rs  config.rs  export.rs  mod.rs  nodes.rs  results.rs  search.rs  utils.rs
tetris_core/src/replay/: mod.rs  npz.rs  types.rs
tetris_core/src/runtime/: evaluation.rs  mod.rs
tetris_core/src/runtime/game_generator/: mod.rs  py_api.rs  runtime.rs  shared.rs  tests.rs
tetris_core/src/search/: agent.rs  config.rs  export.rs  mod.rs  nodes.rs  persistence.rs  results.rs  search.rs  utils.rs
(+548 files in other folders)
