[project]
name = "tetris-mcts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame",
    "maturin",
    "tetris_core",
    "numpy",
    "torch",
    "wandb",
    "ruff",
    "pyright",
    "structlog",
    "simple-parsing",
    "pydantic",
]

[tool.uv.sources]
tetris_core = { path = "tetris_core" }

[tool.pyright]
reportAttributeAccessIssue = "none"  # tetris_core is a native module
