[package]
name = "tetris_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "tetris_core"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.20" }
numpy = "0.20"
rand = "0.8"
rand_distr = "0.4"
tract-onnx = "0.21"
# For background game generation
zip = { version = "0.6", default-features = false, features = ["deflate"] }
npyz = "0.8"
ndarray = "0.15"
# For replay serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For optimized small vectors
smallvec = "1.13"

[dev-dependencies]
proptest = "1.4"
